1. Login and get stream address 2. Report join or leave broadcast

--- a/UI/data/locale/en-US.ini
+++ b/UI/data/locale/en-US.ini
@@ -645,6 +645,11 @@ Basic.Settings.ProgramRestart="The program must be restarted for these settings 
 Basic.Settings.ConfirmTitle="Confirm Changes"
 Basic.Settings.Confirm="You have unsaved changes. Save changes?"
 
+# basic mode 'login' settings
+Basic.Settings.Login="Login"
+Basic.Settings.Login.Username="Username"
+Basic.Settings.Login.Password="Password"
+
 # basic mode 'general' settings
 Basic.Settings.General="General"
 Basic.Settings.General.Theme="Theme"
