--- a/UI/data/locale/zh-TW.ini
+++ b/UI/data/locale/zh-TW.ini
@@ -577,6 +577,10 @@ Basic.Settings.ProgramRestart="為了套用新設定，請關閉後重啟。"
 Basic.Settings.ConfirmTitle="確認修改"
 Basic.Settings.Confirm="您有未儲存的修改。 是否儲存？"
 
+Basic.Settings.Login="登录"
+Basic.Settings.Login.Username="用户名"
+Basic.Settings.Login.Password="密码"
+
 Basic.Settings.General="一般"
 Basic.Settings.General.Theme="佈景主題"
 Basic.Settings.General.Language="語言"
@@ -949,4 +953,3 @@ ContextBar.MediaControls.PlaylistNext="播放清單中下一個"
 ContextBar.MediaControls.PlaylistPrevious="播放清單中上一個"
 ContextBar.MediaControls.MediaProperties="媒體屬性"
 ContextBar.MediaControls.BlindSeek="媒體跳轉元件"
-
